# PValue

./: .gitignore  AGENTS.md  PValueSimulator.spec  P_Value_Program.py  README.md  build.spec  build_exe.py  pyproject.toml  requirements.txt  run_gui.bat  run_web_gui.bat  사용 JSON.json  우이도_2504_2507.csv
examples/: batch_config.json  sample_config.json  sample_metocean.csv  사용 JSON.json  우이도_2504_2507.csv
pvalue/: __init__.py  __main__.py  analysis.py  app.py  cli.py  data.py  desktop.py  khoa.py  kma.py  models.py  reporting.py  simulation.py  visualization.py
pvalue/gui/: __init__.py  main_window.py  tabs.py  widgets.py  workers.py
tests/: test_data.py  test_models.py  test_simulation.py
