[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "marine-pvalue"
version = "5.2.0"
description = "Monte Carlo simulation tool for marine operation campaign feasibility analysis"
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.9"
authors = [
    {name = "PValue Contributors"},
]
keywords = ["marine", "offshore", "simulation", "monte-carlo", "metocean", "p-value"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Science/Research",
    "Topic :: Scientific/Engineering",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]
dependencies = [
    "numpy>=1.24",
    "pandas>=2.0",
    "matplotlib>=3.7",
    "click>=8.0",
]

[project.optional-dependencies]
gui = ["streamlit>=1.30", "plotly>=5.18"]
desktop = ["PyQt6>=6.5"]
excel = ["openpyxl>=3.1"]
dev = ["pytest>=7.0", "pytest-cov>=4.0"]
build = ["pyinstaller>=6.0"]
all = ["marine-pvalue[gui,desktop,excel,dev]"]

[project.scripts]
pvalue = "pvalue.cli:cli"
pvalue-desktop = "pvalue.desktop:main"

[project.urls]
Repository = "https://github.com/geohyub/PValue"

[tool.setuptools.packages.find]
include = ["pvalue*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-v --tb=short"

[tool.ruff]
line-length = 100
target-version = "py39"
